--- a/notebooks/figure1.Rmd
+++ b/notebooks/figure1.Rmd
@@ -21,7 +21,7 @@ Reproduce this figure that Marti made with R so that all the plots fit together 
 
 ## Panel A - portal triad
 
-```{r}
+```{r portalTriad}
 a.path <- "../figures/fig1a.png"
 a <- magick::image_read(a.path)
 a <- ggplot() +
@@ -35,7 +35,7 @@ a <- ggplot() +
 ## Panel B - integration with Aizarani data
 
 
-```{r include=FALSE}
+```{r loadIntegratedWithAizarani, include=FALSE}
 
 cache_path <- "cache"
 dir.create(cache_path)
@@ -56,7 +56,7 @@ queries <- data[names(data) != 'aizarani']
 
 These are all the datasets:
 
-```{r fig.width=5, fig.height=5}
+```{r AizIntegatedCellTypesAllDatasets, fig.width=5, fig.height=5}
 cellTypes <- unique(reference$paper.cluster.names)
 myColors <- brewer.pal(length(cellTypes),"Set3")
 names(myColors) <- cellTypes
@@ -82,7 +82,7 @@ legend.b <- cowplot::get_legend(refplot +
 aizarani.plots <- plot_grid(plotlist=c(list(refplot + NoLegend()), queryplots.aizarani))
 plot_grid(aizarani.plots, legend.b, ncol=1, rel_heights = c(1, 0.1))
 ```
-```{r fig.height = 5, fig.width=10}
+```{r AizIntegatedCellTypesNormalPrePost, fig.height = 5, fig.width=10}
 
 title_theme <- theme(plot.title=element_text(size=9, hjust=0))
 
@@ -117,7 +117,7 @@ The legend is a bit cut off but we can fix that later.
 The rest of the figure uses Marti's datasets, integrated against each other.
 
 
-```{r include=FALSE}
+```{r loadIntegrated, include=FALSE}
 
 cache_file <- file.path(cache_path, "integerated_together_no_mouse.RDS")
 
@@ -150,15 +150,15 @@ cells <- RunUMAP(cells, dims = 1:30, reduction.name = "UMAP")
 cells <- FindNeighbors(cells, reduction = "pca", dims = 1:30)
 cells <- FindClusters(cells, resolution = 0.5)
 
-saveRDS(cache_file)
+saveRDS(cells, cache_file)
 } else {
-  cells <- readRDS(cache_path)
+  cells <- readRDS(cache_file)
 }
 
 ```
 
 
-```{r}
+```{r integratedClusters}
 DimPlot(cells, split.by = "dataset.type")
 ```
 
@@ -175,7 +175,7 @@ Marti calls these clusters:
 
 Let's label them:
 
-```{r}
+```{r integratedClustersLabelled}
 cells$cell.type <- case_when(
   cells$seurat_clusters == 0 ~ "Mid-zonal hepatocytes 3",
   cells$seurat_clusters == 1 ~ "Portal hepatoctyes 1",  
@@ -191,7 +191,7 @@ DimPlot(cells, group.by="cell.type", split.by = "dataset.type")
 
 Marti plotted the two replicates for pre-engraftment and the two high samples after engraftment.  **Question: why plot the replicates separately?**
 
-```{r include=FALSE}
+```{r integratedClustersLabelledC1, include=FALSE}
 
 cellTypes <- unique(cells$cell.type)
 myColors <- brewer.pal(length(cellTypes),"Set1")
@@ -209,7 +209,7 @@ c4 <- DimPlot(subset(cells, dataset.name =="high2"), group.by="cell.type") + ggt
 ```
 
 
-```{r}
+```{r integratedClustersLabelledC2}
 legend.c.right <- cowplot::get_legend(c1 + theme(legend.title = element_blank()))
 legend.c.bottom <- cowplot::get_legend(c1 + theme(legend.title = element_blank(), legend.position = "bottom"))
 
@@ -218,20 +218,20 @@ c
 ```
 
 
-```{r}
+```{r integratedClustersLabelledC3}
 c_patch <- patchwork::wrap_plots(c1, c2 , c3, c4) +  patchwork::plot_layout(guides = "collect", nrow = 1)
 c_patch
 ```
 
 
-```{r fig.width = 10, fig.height = 5}
+```{r ABCcowplot, fig.width = 10, fig.height = 5}
 ab <- cowplot::plot_grid(a, b, nrow=1)
 cowplot::plot_grid(ab, c, ncol=1)
 ```
 
 
 
-```{r fig.width = 10, fig.height = 5}
+```{r ABCpatchwork, fig.width = 10, fig.height = 5}
 c1 <- c1 + NoLegend()
 c2 <- c2 + NoLegend()
 c3 <- c3 + NoLegend()
